# EOOP20L-project

./: .gitignore  CMakeLists.txt  README.md  build.sh  run.sh  test.sh
.github/workflows/: ci.yml
doc/: final.md  preliminary.md
src/: Bookmaker.cpp  Bookmaker.hpp  CMakeLists.txt  Driver.cpp  Driver.hpp  DriverTime.cpp  DriverTime.hpp  Game.cpp  Game.hpp  Rally.cpp  Rally.hpp  RallyEdition.cpp  RallyEdition.hpp  Simulator.cpp  Simulator.hpp  UI.cpp  UI.hpp  Utils.cpp  Utils.hpp  bookmaker.cpp  bookmaker.hpp  driver.cpp  driver.hpp  driverTime.cpp  driverTime.hpp  game.cpp  game.hpp  main.cpp  rally.cpp  rally.hpp  rallyEdition.cpp  rallyEdition.hpp  simulator.cpp  simulator.hpp  ui.cpp  ui.hpp
tests/: BookmakerTests.cpp  CMakeLists.txt  DriverTests.cpp  DriverTimeTests.cpp  RallyTests.cpp  SimulatorTests.cpp  class-test.cpp  function-test.cpp  main-test.cpp
